fix(gds-search-form): mobile safari overflow

--- a/src/components/gds-search-form/gds-search-form.scss
+++ b/src/components/gds-search-form/gds-search-form.scss
@@ -48,7 +48,6 @@ form {
   min-height: auto;
   // Make room for button
   padding-right: var(--gds-search-form-button-width);
-  box-sizing: content-box;
 
   &::placeholder {
     color: var(--color-black);
